# LicenseGuard-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci-insomnia.yaml  ci-test.yml  ci-tests.yml  release-images.yml
migrations/: env.py
migrations/versions/: bdc4d0bc52c4_init_tables.py
src/api/: schemas.py
src/api/routers/: llm.py
src/core/: config.py
src/crud/: events.py  users.py
src/db/: db.py  session.py
src/services/: events.py  users.py
src/srv/: app.py  schemas.py  security.py  validators.py
src/srv/routers/: llm.py  status.py  users.py
tests/: conftest.py  test_analyze_route.py  test_db_unit.py  test_events_services_unit.py  test_llm_analysis_unit.py  test_security_unit.py  test_status_route.py  test_user_auth_flow_integration.py  test_users_crud_unit.py  test_users_me_route.py  test_users_register_route.py  test_users_services_unit.py  test_users_token_route.py  test_validators_unit.py
