[project]
name = "LicenseGuard-API"
version = "0.1.0"
description = "Automatically determines licenses for your packages in requirements.txt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "pydantic-settings>=2.10.1",
]
