[project]
name = "LicenseGuard-API"
version = "0.2.0"
description = "Automatically determines licenses for your packages in requirements.txt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-multipart>=0.0.20",
    "requirements-parser>=0.13.0",
    "starlette>=0.47.2",
]
