[project]
name = "LicenseGuard-API"
version = "0.3.1"
description = "Automatically determines licenses for your packages in requirements.txt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-multipart>=0.0.20",
    "requirements-parser>=0.13.0",
    "starlette>=0.47.2",
    "sqlmodel>=0.0.25",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "aioodbc>=0.5.0",
    "pyodbc>=5.2.0",
    "aiomysql>=0.2.0",
    "asgi-lifespan>=2.1.0",
    "alembic>=1.16.5",
    "cryptography>=46.0.2",
]
